# dating_app

./: .gitignore  README.md  download-native-modules.sh  goals.txt
.github/workflows/: main.yml
lexicons/com/fypapp/: block.json  deleteProfile.json  discover.json  getConversation.json  getMatches.json  getProfile.json  like.json  match.json  message.json  pass.json  preferences.json  profile.json  report.json  sendMessage.json  unmatch.json  updateProfile.json
pds/: installer.sh
pds/pds-main/: .env.https  Caddyfile  README.md  com.fypapp.match.json  com.fypapp.profile.json  compose.yaml  curl_test.json  docker-compose.local.yml  pdsadmin-local.sh  pdsadmin.sh  sample.env
pds/pds-main/.github/workflows/: build-pds-native-modules.yml
pds/pds-main/data/: account.sqlite  account.sqlite-shm  account.sqlite-wal  did_cache.sqlite  did_cache.sqlite-shm  did_cache.sqlite-wal  sequencer.sqlite  sequencer.sqlite-shm  sequencer.sqlite-wal
pds/pds-main/data/actors/03/didplcmkafqwq6doxemelmfndrqxo3/: key  (+1 more)
pds/pds-main/data/caddy/caddy/: instance.uuid  last_clean.json
pds/pds-main/pdsadmin/: account.sh  create-invite-code.sh  help.sh
ui/: build.gradle.kts  gradle.properties  settings.gradle
ui/app/: build.gradle.kts
ui/app/src/main/: AndroidManifest.xml
ui/core/pds/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
ui/core/pds/scripts/: prepare-node-modules.sh
ui/core/pds/src/main/: AndroidManifest.xml
ui/core/pds/src/main/cpp/: CMakeLists.txt  node_bridge.cpp
ui/feature/onboarding/ui/: build.gradle.kts
ui/gradle/: libs.versions.toml
(+48 files in other folders)
